--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,11 @@ jobs:
           - goos: windows
             goarch: arm64
           - goos: android
-            goarch: arm64
+            goarch: amd64
+          - goos: android
+            goarch: "386"
+          - goos: android
+            goarch: arm
       fail-fast: true
     steps:
       - uses: actions/checkout@v2
